'String.formatted' wasn't around in Java 11